--- a/sequence_test.css
+++ b/sequence_test.css
@@ -41,8 +41,10 @@
         max-width: 90vh;
     }
     #mov2{
-        width: 90vw;
-        height: 50vw;
+        width: 80vw;
+        height: 45vw;
+        max-height: 50vh;
+        max-width: 90vh;
     }
 
     .space{
